--- a/src/index.css
+++ b/src/index.css
@@ -1,32 +1,26 @@
 @import "tailwindcss";
 
-@theme{
-  --color-primary: #FF5733;
-  --color-secondary: #83C322;
-  --color-primary-dark: #615FFF;
-  --color-secondary-dark: #00BCFF;
+@theme {
+  --color-primary: #ff5733;
+  --color-secondary: #83c322;
+  --color-primary-dark: #615fff;
+  --color-secondary-dark: #00bcff;
   --color-background-dark: #030712;
-  --color-card-background-dark: #10141E;
+  --color-card-background-dark: #10141e;
   --font-display: "Poppins", sans-serif;
   --breakpoint-phone: 480px;
   --breakpoint-tablet: 1024px;
   --breakpoint-desktop: 1536px;
 
-
-
-
-  
-  
-  
   /* @utility no-scrollbar {
     /* FIREFOX */
-    /* scrollbar-width: none; */
-    /* IE AND EDGE */
-    /* -ms-overflow-style: none; */
-    /* CHROME, SAFARI, AND OPERA */
-    /* &::-webkit-scrollbar {
+  /* scrollbar-width: none; */
+  /* IE AND EDGE */
+  /* -ms-overflow-style: none; */
+  /* CHROME, SAFARI, AND OPERA */
+  /* &::-webkit-scrollbar {
       display: none;
     }
-  /* } */ 
-};
+  /* } */
+}
 @custom-variant dark (&:where(.dark, .dark *));
